Fix dark theme legibility bugs
At least in Material Design, maybe both modes

--- a/src/global.scss
+++ b/src/global.scss
@@ -10,6 +10,9 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
+// https://ionicframework.com/docs/theming/dark-mode#system
+@import "@ionic/angular/css/palettes/dark.system.css";
+
 :root {
   ion-input, ion-select {
     --highlight-color-valid: var(--ion-color-primary);
@@ -119,51 +122,4 @@ body.dark {
   --ion-color-light-contrast-rgb: 255, 255, 255;
   --ion-color-light-shade: #1e2023;
   --ion-color-light-tint: #383a3e;
-}
-
-/*
- * iOS Dark Theme
- * -------------------------------------------
- */
-
-.ios body.dark {
-  --ion-background-color: #000000;
-  --ion-background-color-rgb: 0, 0, 0;
-
-  --ion-text-color: #ffffff;
-  --ion-text-color-rgb: 255, 255, 255;
-
-  --ion-item-background: #000000;
-
-  --ion-card-background: #1c1c1d;
-}
-
-.ios body.dark ion-modal {
-  --ion-background-color: var(--ion-background-color-step-100);
-  --ion-toolbar-background: var(--ion-background-color-step-150);
-  --ion-toolbar-border-color: var(--ion-background-color-step-250);
-  --ion-item-background: var(--ion-background-color-step-150);
-}
-
-/*
- * Material Design Dark Theme
- * -------------------------------------------
- */
-
-.md body.dark {
-  --ion-background-color: #121212;
-  --ion-background-color-rgb: 18, 18, 18;
-
-  --ion-text-color: #ffffff;
-  --ion-text-color-rgb: 255, 255, 255;
-
-  --ion-border-color: #222222;
-
-  --ion-item-background: #1e1e1e;
-
-  --ion-toolbar-background: #1f1f1f;
-
-  --ion-tab-bar-background: #1f1f1f;
-
-  --ion-card-background: #1e1e1e;
 }
